--- a/backend/package.json
+++ b/backend/package.json
@@ -21,6 +21,7 @@
     "typescript": "^5.3.3"
   },
   "devDependencies": {
+    "@types/bcrypt": "^5.0.2",
     "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21"
   }
