--- a/backend/package.json
+++ b/backend/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "npx concurrently \"tsc -w\" \"nodemon build/index.js\""
+    "dev": "npx concurrently \"tsc -w\" \"nodemon build/index.js\"",
+    "build" : "tsc"
   },
   "keywords": [],
   "author": "",
