--- a/backend/package.json
+++ b/backend/package.json
@@ -21,8 +21,7 @@
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.2.1",
     "nodemon": "^3.1.0",
-    "tsc": "^2.0.4",
-    "typescript": "^5.3.3"
+    "tsc": "^2.0.4"
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.2",
@@ -30,6 +29,7 @@
     "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
     "@types/jsonwebtoken": "^9.0.6",
-    "joi": "^17.12.2"
+    "joi": "^17.12.2",
+    "typescript": "^5.4.2"
   }
 }
