--- a/backend/package.json
+++ b/backend/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "npx concurrently \"tsc -w\" \"nodemon build/index.js\"",
-    "build": "tsc"
+    "build": "tsc",
+    "dev-production" : "nodemon build/index.js" 
   },
   "keywords": [],
   "author": "",
